# qt-creator-hang

./: CMakeLists.txt
src/: test.cpp
